# votey

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE.md  Makefile  Pipfile  README.md  app.json  app.py  fly.toml  pyproject.toml  requirements-bootstrap.txt  run.py  votey.py
.github/workflows/: deploy.yml  test.yml
scripts/: lint.sh
tests/: command_parser_test.py  conftest.py  generate_poll_markup_test.py  modal_test.py  oauth_test.py  slack_route_test.py  utils_test.py  view_submission_test.py
votey/: __init__.py  config.py  modal.py  models.py  slack.py  utils.py  votey.py
