[tool.poetry]
name = "votey"
version = "0.1.0"
description = "simple, stupid slack polling for yelp"
authors = ["Kedar Vaidya <kedar@yelp.com>, Matthew Ess <mess@yelp.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.2"
flask = "^1.0"

[tool.poetry.dev-dependencies]
prospector = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
