[project]
name = "votey"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "gunicorn",
    "psycopg2-binary",
    "slack-bolt>=1.28.0",
    "slack-sdk>=3.41.0",
    "sqlalchemy",
]

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "python-dotenv",
    "pytest",
    "pytest-cov",
    "ruff>=0.15.0",
    "types-flask-sqlalchemy>=2.5.9.4",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "G",    # flake8-logging-format
    "RUF",  # ruff-specific
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with formatter)
    "E501",  # line too long (formatter handles wrapping)
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask"
implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=votey"

[tool.coverage.run]
source = ["votey"]
omit = ["tests/*"]
